--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,13 @@
   "proxy": "http://localhost:8000",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.13.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
-    "axios": "^1.8.4",
+    "axios": "^1.13.2",
     "leaflet": "1.9.4",
     "lucide-react": "^0.544.0",
     "node-fetch": "^3.3.2",
